Css fixes for jumping elements

--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@
     align-items: flex-start;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    max-width: 1500px;
+    max-width: 1450px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 100px;
