--- a/src/components/sun-info/sun-info-style.css
+++ b/src/components/sun-info/sun-info-style.css
@@ -3,7 +3,7 @@
     /**/
     background: rgba(255, 255, 255, 0.1);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.18);
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(15px);
     -webkit-backdrop-filter: blur(10px);
     color: var(--pozadina2);
     width: 450px;
