--- a/src/index.css
+++ b/src/index.css
@@ -13,10 +13,10 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 
-    background-image: linear-gradient(to right, #efefbb 0%, #d4d3dd 60%);
-    background-repeat: no-repeat repeat;
-    background-size: contain;
-    background-position: center;
+    background: url("../public/background.jpg") no-repeat center center fixed;
+}
+::-webkit-scrollbar {
+    display: none;
 }
 
 code {
